<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Баш</string>
    <string name="app_name_with_type">%s</string>
    <string name="app_name_with_type_and_page">%1$s (%2$s)</string>
    <string name="action_settings">Настройки</string>
    <string name="action_refresh">Обновить</string>
    <string-array name="types">
        <item>Новые</item>
        <item>Случайные</item>
        <item>Лучшие</item>
        <item>По рейтингу</item>
        <item>Поиск</item>
        <item>Избранное</item>
        <item>Бездна</item>
        <item>Топ Бездны</item>
        <item>Лучшее Бездны</item>
        <item>Оффлайн</item>
    </string-array>

    <string-array name="item_menu">
        <item>Нравится</item>
        <item>Не нравится</item>
        <item>В избранное</item>
    </string-array>

    <string-array name="item_menu_favorites">
        <item>Удалить из избранного</item>
    </string-array>

    <string name="rulez_confirm">Вам %1$s понравилась цитата %2$s</string>
    <string name="no">не</string>

    <string name="drawer_open">Открытие главного меню</string>
    <string name="drawer_close">Закрытие главного меню</string>
    <string name="updating_fail">Не удалось обновить список цитат.</string>
    <string name="added_to_favorites">Цитата добавлена в избранное</string>
    <string name="removed_to_favorites">Цитата удалена из избранного</string>
    <string name="empty_list">Пока здесь пусто :(</string>
    <string name="search_action">Поиск</string>
    <string name="search_hint">Текст или номер цитаты</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="pref_header_general">Общие</string>
    <string name="back">Назад</string>
    <string name="forward">Вперёд</string>
    <string name="like">Нравится</string>
    <string name="dont_like">Не нравится</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="remove_from_favorites">Удалить из избранного</string>
    <string name="error">Ошибка</string>
    <string name="choose_period">Укажите период</string>
    <string name="error_send_request">Не удалось отправить запрос</string>
    <string name="vote_accepted">Ваш голос учтён</string>

    <string-array name="months">
        <item>янв</item>
        <item>фев</item>
        <item>мар</item>
        <item>апр</item>
        <item>май</item>
        <item>июн</item>
        <item>июл</item>
        <item>авг</item>
        <item>сен</item>
        <item>окт</item>
        <item>ноя</item>
        <item>дек</item>
    </string-array>

    <string name="current_page">Текущая страница</string>
    <string name="select_page">Укажите страницу</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="new_quote">Новая!</string>
    <string name="best_of_day">Лучшие цитаты дня</string>
    <string name="best_of_week">Лучшие цитаты недели</string>
    <string name="today">Сегодня</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="boyan">[:||||:]</string>
    <string name="sample_number">3204</string>
    <string name="search_dialog_title">Укажитие строку для поиска</string>
    <string name="font_size_title">Размер шрифта</string>
    <string name="font_size_example">Пример текста, %s</string>
    <string name="load_error">Ошибка при получении данных.</string>
    <string name="auto_update_summary">Новые цитаты будут загружаться автоматически в %s</string>
    <string name="auto_update_title">Время обновления</string>
    <string name="auto_update_time_key">auto_update_time</string>
    <string name="auto_update_enable_key">auto_update_enable</string>
    <string name="auto_update_timestamp_key">auto_update_timestamp</string>
    <string name="last_update">Последнее обновление от %s</string>
    <string name="auto_update_enable_title">Использовать обновление</string>
    <string name="enable_list_item_animation_title">Анимация при обновлении</string>
    <string name="enable_list_item_animation_key">enable_list_item_animation</string>
    <string name="auto_update_category">Автоматическое обновление</string>
    <string name="offline_hint">Здесь будут отображаться цитаты загруженные автоматически.</string>
    <string name="auto_update_wifi_key">auto_update_wifi_key</string>
    <string name="auto_update_wife_title">Обновлять только по wifi</string>
    <string name="version_title">Версия</string>
    <string name="version_summary">Текущая версия: %s</string>
    <string name="version_key">version_key</string>
    <string name="about_app_title">О программе</string>
    <string name="auto_update_wifi_summary">Обновление будет происходить только если есть доступ к сети через wifi.</string>
    <string name="error_no_connection">При загрузке данных произошла ошибка. Проверьте Ваше подключение к сети</string>
    <string name="data_refreshing">Данные обновляются…</string>
    <string name="about_rights">Правообладатель контента: <u>bash.im</u></string>
    <string name="about_support">Предложения или замечания</string>
    <string name="support_email">anotheryetandroidbashclient@gmail.com</string>
    <string name="support_email_subject">Поддержка клиента Bash.im для Android</string>
    <string name="bash_url">http://bash.im</string>
    <string name="rating">Рейтинг</string>
    <string name="boyan_desc">Боян</string>
    <string name="share_desc">Поделиться</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="quote_will_be_in_gallery">Цитата появится в галерее</string>
    <string name="error_share_quote">Не удалось поделиться цитатой.</string>
    <string-array name="share_types">
        <item>Изображением</item>
        <item>Текстом</item>
        <item>Ссылкой</item>
        <item>Буфер обмена</item>
    </string-array>

    <string name="share_image">Изображением</string>
    <string name="share_text">Текстом</string>
    <string name="share_link">Ссылкой</string>
    <string name="share_buffer">Буфер обмена</string>

    <string-array name="share_types_short">
        <item>Изображением</item>
        <item>Текстом</item>
        <item>Буфер обмена</item>
    </string-array>
    <string name="auto_update_depth_key">auto_update_depth_key</string>
    <string name="auto_update_depth_title">Количество страниц</string>
    <string name="auto_update_depth_summary">Количество страниц, которое будет загружено в автоматическом режиме: %s</string>
    <string name="set_date">Укажите дату</string>
    <string name="enable_scroll_volume">enable_scroll_volume</string>
    <string name="enable_scroll_volume_title">Прокрутка</string>
    <string name="enable_scroll_volume_summary">Использовать клавиши громкости для прокрутки списка цитат</string>
    <string name="select_theme_key">select_theme_key</string>
    <string name="select_theme_title">Тема приложения</string>
    <string name="select_theme_dark">Тёмная</string>
    <string name="select_theme_light">Светлая</string>
    <string name="change_orientation_key">change_orientation_key</string>
    <string name="change_orientation_title">Отключить поворот</string>
    <string name="change_orientation_summary">Отключить смену ориентации экрана при повороте</string>
    <string name="keep_screen_key">keep_screen_key</string>
    <string name="keep_screen_title">Не отключать экран</string>
    <string name="keep_screen_summary">Не отключать экран при чтении</string>
    <string-array name="listArray">
        <item>Тёмная</item>
        <item>Светлая</item>
    </string-array>

    <string name="like_it">Нравится</string>
    <string name="dislike_it">Не нравится</string>
</resources>
