<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ru.aim.anotheryetbashclient.settings.FontPreference
        android:max="24"
        android:key="font_size"
        android:title="Font size"
        android:summary="Set font size" />

    <CheckBoxPreference
        android:key="@string/enable_list_item_animation_key"
        android:title="@string/enable_list_item_animation_title"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="@string/enable_scroll_volume"
        android:title="@string/enable_scroll_volume_title"
        android:summary="@string/enable_scroll_volume_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="@string/select_theme_key"
        android:title="@string/select_theme_title"
        android:summary="@string/select_theme_light"
        android:entries="@array/listArray"
        android:defaultValue="@string/select_theme_light"
        android:entryValues="@array/listArray" />

    <CheckBoxPreference
        android:key="@string/change_orientation_key"
        android:title="@string/change_orientation_title"
        android:summary="@string/change_orientation_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="@string/keep_screen_key"
        android:title="@string/keep_screen_title"
        android:summary="@string/keep_screen_summary"
        android:defaultValue="false" />

</PreferenceScreen>
