<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/plus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/like"
        android:text="@string/plus"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rating"
        android:text="@string/sample_number"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/minus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/dont_like"
        android:text="@string/minus"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <Button
        android:id="@+id/boyan"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/boyan_desc"
        android:text="@string/boyan"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <ImageButton
        android:id="@+id/add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/add_to_favorites"
        android:padding="8dp"
        android:src="@drawable/ic_star_outline_white_38dp" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/share_desc"
        android:padding="8dp"
        android:src="?attr/share_icon" />

</LinearLayout>