<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search_action"
            android:showAsAction="ifRoom|collapseActionView"
            android:actionViewClass="android.widget.SearchView"
            />

    <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/action_refresh"
            android:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            android:showAsAction="never"/>

</menu>
