<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/quote_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@android:id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/app_name"
            android:textAppearance="@style/listItemSubtitle" />

        <TextView
            android:id="@+id/newQuote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingEnd="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="0dp"
            android:paddingStart="4dp"
            android:text="@string/new_quote"
            android:textAppearance="@style/listItemNew"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <TextView
            android:id="@android:id/text1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/app_name"
            android:textAppearance="@style/listItemSubtitle" />

        <ImageView
            android:id="@+id/quote_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/about_app_title"
            android:padding="8dp"
            app:srcCompat="?attr/more_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAppearance="@style/listItemText" />

    </LinearLayout>

</LinearLayout>
